Add id to every section and in navbar add this id to href for scrool ot section on click in index.html

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <nav class="nav" role="navigation">
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="#">About Me</a>
+              <a class="nav__link" href="#about">About</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Skills</a>
+              <a class="nav__link" href="#skills">Skills</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Projects</a>
+              <a class="nav__link" href="#projects">Projects</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Testimonials</a>
+              <a class="nav__link" href="#testimonials">Testimonials</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Resume</a>
+              <a class="nav__link" href="#resume">Resume</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#">Contact</a>
+              <a class="nav__link" href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -84,7 +84,7 @@
             </picture>
             <h1 class="hero__title"><span>Prodip</span> <span>Bain</span></h1>
           </div>
-          <div class="about_me--content">
+          <div class="about_me--content" id="about">
             <h2 class="about_me--heading">About Me</h2>
             <p class="about_me__text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
@@ -121,7 +121,7 @@
         <!-- </div> -->
       </section>
 
-      <section class="skills">
+      <section class="skills" id="skills">
         <div class="container">
           <h2 class="section__title">Skills</h2>
           <div class="frontend skills__card">
@@ -253,7 +253,7 @@
           </div>
         </div>
       </section>
-      <section class="projects">
+      <section class="projects" id="projects">
         <div class="container">
           <h2 class="section__title">Projects</h2>
           <div class="project__card--wrapper">
@@ -533,7 +533,7 @@
         </div>
       </section>
 
-      <section class="testimonials">
+      <section class="testimonials" id="testimonials">
         <div class="background-image"></div>
         <div class="container testimonials--content">
           <h2 class="section__title">Testimonials</h2>
@@ -554,7 +554,7 @@
         </div>
       </section>
 
-      <section class="resume">
+      <section class="resume" id="resume">
         <div class="container resume--content">
           <h2 class="section__title">Resume</h2>
           <p class="resume--description">
@@ -573,7 +573,7 @@
       </section>
     </main>
 
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="contact__container--wrapper">
         <div class="container">
           <div class="contact__info">
