Add about me text to about me section in index.html

--- a/index.html
+++ b/index.html
@@ -86,15 +86,35 @@
           </div>
           <div class="about_me--content" id="about">
             <h2 class="about_me--heading">About Me</h2>
-            <p class="about_me__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-              soluta unde aperiam accusantium officiis, ducimus tempore velit
-              numquam veritatis! Eius dolore dignissimos cum? Hic incidunt
-              repellat ad commodi in. Minus? Lorem, ipsum dolor sit amet
-              consectetur adipisicing elit. Nemo nulla recusandae et accusantium
-              cumque dolorum, numquam omnis nesciunt aliquid consequuntur. Iure
-              nesciunt hic unde. Facilis impedit commodi sed quod voluptate.
-            </p>
+
+            <div class="about_me__text">
+              <p>
+                Hi, I’m <strong>Prodip Bain</strong>, a passionate and
+                self-taught front-end developer based in Bangladesh. I
+                specialize in turning modern UI designs into clean, responsive
+                websites using <strong>HTML, CSS, and JavaScript</strong>, and
+                I’m currently learning
+                <strong>React, Node.js, and PostgreSQL</strong> to become a
+                full-stack developer.
+              </p>
+              <p>
+                I’m comfortable working across both
+                <strong>Windows and Linux</strong>, and I use tools like
+                <strong>VS Code, GitHub, and Postman</strong> daily in my
+                workflow.
+              </p>
+              <p>
+                As an <strong>imaginative and creative mind</strong>, I enjoy
+                reading, writing, traveling, going to the gym, and exploring
+                topics like psychology and human behavior.
+              </p>
+              <p>
+                I’m open to <strong>freelance projects</strong>,
+                <strong>internships</strong>, and
+                <strong>junior developer roles</strong>, and I'm always looking
+                to grow through real-world challenges and collaboration.
+              </p>
+            </div>
             <div class="about_me__icons">
               <a
                 href="https://github.com/pbain63"
