Update about me text in index.html

--- a/index.html
+++ b/index.html
@@ -97,22 +97,26 @@
                 <strong>React, Node.js, and PostgreSQL</strong> to become a
                 full-stack developer.
               </p>
+
               <p>
                 I’m comfortable working across both
-                <strong>Windows and Linux</strong>, and I use tools like
-                <strong>VS Code, GitHub, and Postman</strong> daily in my
-                workflow.
+                <strong>Windows and Linux</strong> environments.
               </p>
+
               <p>
-                As an <strong>imaginative and creative mind</strong>, I enjoy
-                reading, writing, traveling, going to the gym, and exploring
-                topics like psychology and human behavior.
+                As a <strong>creative and curious thinker</strong>, I enjoy
+                reading, writing, traveling, and exploring topics like
+                psychology and human behavior. I also enjoy staying active and
+                going to the gym. I respect all cultures and thrive in
+                collaborative, team-based environments.
               </p>
+
               <p>
                 I’m open to <strong>freelance projects</strong>,
                 <strong>internships</strong>, and
-                <strong>junior developer roles</strong>, and I'm always looking
-                to grow through real-world challenges and collaboration.
+                <strong>junior developer roles</strong>, and I’m always looking
+                to grow through real-world challenges and meaningful
+                collaboration.
               </p>
             </div>
             <div class="about_me__icons">
