Add contact__row--wrapper div to container in index.html

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
     <section class="contact" id="contact">
       <div class="contact__container--wrapper">
-        <div class="container">
+        <div class="container contact__row--wrapper">
           <div class="contact__info">
             <h2 class="section__title">Contact</h2>
             <p class="contact__text">
