--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="hero">
         <!-- <div class="hero__clip-path"> -->
         <div class="background-shape"></div>
-        <div class="container">
+        <div class="container hero__row--wrapper">
           <div class="hero__image--content">
             <picture>
               <img
