Update about me text in index.html

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
               <p>
                 As a <strong>creative and curious thinker</strong>, I enjoy
-                reading, writing, traveling, and exploring topics like
-                psychology and human behavior. I also enjoy staying active and
+                reading, writing, any form of art, traveling,
+                psychology, and human behavior. I also enjoy staying active and
                 going to the gym. I respect all cultures and thrive in
                 collaborative, team-based environments.
               </p>
