Add text wrapper div to testimonials, resume in index.html

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
               <p>
                 As a <strong>creative and curious thinker</strong>, I enjoy
-                reading, writing, any form of art, traveling,
-                psychology, and human behavior. I also enjoy staying active and
-                going to the gym. I respect all cultures and thrive in
-                collaborative, team-based environments.
+                reading, writing, any form of art, traveling, psychology, and
+                human behavior. I also enjoy staying active and going to the
+                gym. I respect all cultures and thrive in collaborative,
+                team-based environments.
               </p>
 
               <p>
@@ -560,37 +560,45 @@
         <div class="background-image"></div>
         <div class="container testimonials--content">
           <h2 class="section__title">Testimonials</h2>
-          <p>
-            Real client feedback coming soon. Until then, here's what people
-            say:
-          </p>
-          <blockquote class="quote">
-            “Very responsive, pixel-perfect HTML from Figma designs. Great
-            communicator.”
-            <footer class="quote--speaker">— UX Designer, Apple (Mock)</footer>
-          </blockquote>
-          <blockquote class="quote">
-            “Reliable, fast, and easy to work with. Highly recommend for
-            front-end projects.”
-            <footer class="quote--speaker">— Tech Lead, Google (Mock)</footer>
-          </blockquote>
+          <div class="testimonials__text--wrapper">
+            <p>
+              Real client feedback coming soon. Until then, here's what people
+              say:
+            </p>
+            <blockquote class="quote">
+              “Very responsive, pixel-perfect HTML from Figma designs. Great
+              communicator.”
+              <footer class="quote--speaker">
+                — UX Designer, Apple (Mock)
+              </footer>
+            </blockquote>
+            <blockquote class="quote">
+              “Reliable, fast, and easy to work with. Highly recommend for
+              front-end projects.”
+              <footer class="quote--speaker">— Tech Lead, Google (Mock)</footer>
+            </blockquote>
+          </div>
         </div>
       </section>
 
       <section class="resume" id="resume">
         <div class="container resume--content">
           <h2 class="section__title">Resume</h2>
-          <p class="resume--description">
-            This is my general resume. For job-specific or updated versions,
-            fell free to contact me.
-          </p>
-          <div class="resume-buttons">
-            <a href="./assets/resume/Prodip_Bain_Resume.pdf" download>
-              <button class="resume__btn">Download Resume</button>
-            </a>
-            <a href="./assets/resume/Prodip_Bain_Resume.pdf" target="_blank">
-              <button class="resume__btn resume__btn--view">View Resume</button>
-            </a>
+          <div class="resume__text--wrapper">
+            <p class="resume--description">
+              This is my general resume. For job-specific or updated versions,
+              fell free to contact me.
+            </p>
+            <div class="resume-buttons">
+              <a href="./assets/resume/Prodip_Bain_Resume.pdf" download>
+                <button class="resume__btn">Download Resume</button>
+              </a>
+              <a href="./assets/resume/Prodip_Bain_Resume.pdf" target="_blank">
+                <button class="resume__btn resume__btn--view">
+                  View Resume
+                </button>
+              </a>
+            </div>
           </div>
         </div>
       </section>
