Add go to top button at the bootom of html code in index.html

--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
           alt="fallen angel by alexandre cabanel"
         />
       </picture>
+      <button id="backToTopBtn" title="Go to top">⇧</button>
     </section>
 
     <script src="./main.js"></script>
