Add toogle dark mode button to header section in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <header>
       <div class="container row">
         <div class="header__name">Prodip Bain</div>
+        <!-- Toggle dark mode  -->
+        <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button>
         <nav class="nav" role="navigation">
           <ul class="nav__list">
             <li class="nav__item">
@@ -48,6 +50,9 @@
     </header>
     <main>
       <section class="hero">
+        <!-- Toggle dark mode  -->
+        <!-- <button id="themeToggle" aria-label="Toggle Dark Mode">🌙</button> -->
+
         <!-- <div class="hero__clip-path"> -->
         <div class="background-shape"></div>
         <div class="container hero__row--wrapper">
