Update testimonials section in index.html

--- a/index.html
+++ b/index.html
@@ -566,22 +566,31 @@
         <div class="container testimonials--content">
           <h2 class="section__title">Testimonials</h2>
           <div class="testimonials__text--wrapper">
-            <p>
-              Real client feedback coming soon. Until then, here's what people
-              say:
-            </p>
+            <p>What Others Say About Me:</p>
+
             <blockquote class="quote">
-              “Very responsive, pixel-perfect HTML from Figma designs. Great
-              communicator.”
+              “Mr. Prodip Bain consistently ranked in the top three of our class
+              at Stamford University and stood out for his academic excellence,
+              tireless work ethic, and natural leadership. He brought people
+              together, delegated tasks effectively, and fostered a
+              collaborative environment for success. He is kind, honest, and
+              compassionate — someone whose integrity leaves a lasting impact.”
               <footer class="quote--speaker">
-                — UX Designer, Apple (Mock)
+                —
+                <strong
+                  ><a
+                    href="https://www.linkedin.com/in/kszaman/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Dr. Khan Shahriya Zaman</a
+                  ></strong
+                >
+                , Lecturer, Independent University Bangladesh (IUB)
               </footer>
             </blockquote>
-            <blockquote class="quote">
-              “Reliable, fast, and easy to work with. Highly recommend for
-              front-end projects.”
-              <footer class="quote--speaker">— Tech Lead, Google (Mock)</footer>
-            </blockquote>
+            <p class="coming-soon">
+              More recommendations coming soon as I complete more projects.
+            </p>
           </div>
         </div>
       </section>
