Add screenshots to projects section in index.html

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <div class="project-image">
                 <img
                   class="project__screenshoot"
-                  src="./assets/screenshots/desktop-view.png"
+                  src="./assets/screenshots/Responsive-layout-desktop-view.webp"
                   alt="screenshot of desktop view"
                 />
               </div>
@@ -469,7 +469,7 @@
               <div class="project-image">
                 <img
                   class="project__screenshoot"
-                  src="./assets/screenshots/Desktop-view_Project_landing_page.png"
+                  src="./assets/screenshots/landing-page-desktop-view.webp"
                   alt="screenshot of landing page desktop view"
                 />
               </div>
