Add another tech on project section in index.html

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
               <div class="tech">
                 <span>HTML5</span>
                 <span>CSS3</span>
+                <span>JavaScript</span>
               </div>
             </div>
 
