Update description text on about me section in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 Hi, I’m <strong>Prodip Bain</strong>, a passionate and
                 self-taught front-end developer based in Bangladesh. I
                 specialize in turning modern UI designs into clean, responsive
-                websites using <strong>HTML, CSS, and JavaScript</strong>, and
+                websites using <strong>HTML5, CSS3, and JavaScript</strong>, and
                 I’m currently learning
                 <strong>React, Node.js, and PostgreSQL</strong> to become a
                 full-stack developer.
