Update typos mistake from tools section in style.css

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               </div>
             </div>
             <div class="tools skills__card">
-              <h3 class="skills__heading">Tolls</h3>
+              <h3 class="skills__heading">Tools</h3>
               <div class="skills__items--container">
                 <div class="skills__items">
                   <img
