Correct typos mistake of project image class name in index.html

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/Responsive-layout-desktop-view.webp"
                   alt="screenshot of desktop view"
                 />
@@ -328,7 +328,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/Tic Tac Toe 3.png"
                   alt="desktop view of "
                 />
@@ -373,7 +373,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/Library_3.png"
                   alt="desktop view of "
                 />
@@ -418,7 +418,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/calculator.png"
                   alt="desktop view of "
                 />
@@ -464,7 +464,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/landing-page-desktop-view.webp"
                   alt="screenshot of landing page desktop view"
                 />
@@ -509,7 +509,7 @@
             <div class="project__card">
               <div class="project-image">
                 <img
-                  class="project__screenshoot"
+                  class="project__screenshot"
                   src="./assets/screenshots/food-delivery-app.png"
                   alt="screenshot of desktop view "
                 />
