Update resume typos to resume section in index.html

--- a/index.html
+++ b/index.html
@@ -593,19 +593,19 @@
 
       <section class="resume" id="resume">
         <div class="container resume--content">
-          <h2 class="section__title">Resume</h2>
+          <h2 class="section__title">Résumé</h2>
           <div class="resume__text--wrapper">
             <p class="resume--description">
-              This is my general resume. For job-specific or updated versions,
+              This is my general résumé. For job-specific or updated versions,
               fell free to contact me.
             </p>
             <div class="resume-buttons">
               <a href="./assets/resume/Prodip_Bain_Resume.pdf" download>
-                <button class="resume__btn">Download Resume</button>
+                <button class="resume__btn">Download Résumé</button>
               </a>
               <a href="./assets/resume/Prodip_Bain_Resume.pdf" target="_blank">
                 <button class="resume__btn resume__btn--view">
-                  View Resume
+                  View Résumé
                 </button>
               </a>
             </div>
