--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav__link" href="#testimonials">Testimonials</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#resume">Resume</a>
+              <a class="nav__link" href="#resume">Résumé</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="#contact">Contact</a>
